update Netherland extension
-improve the code
-improve the reports
-change some files name
-update tests
-add images
-add readme file

--- a/VAT/VatReport/ch.banana.nl.app.vat.report.manifest.json
+++ b/VAT/VatReport/ch.banana.nl.app.vat.report.manifest.json
@@ -4,7 +4,7 @@
     "countryCode": "nl",
     "description": "Netherlands VAT Reports",
     "description.en": "Netherlands VAT Reports",
-    "id": "netherlandvatreports",
+    "id": "netherland.vat.reports",
     "language": "en",
     "publisher": "Banana.ch",
     "title": "Netherlands VAT Reports",
